terraform/development/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  tags = {
    Name        = var.vpc_name
    Environment = var.environment_name
    Owner       = var.owner_name
  }
}
